New nbs player (#586)
* New nbs player

* Remove `StringUtils`